# haskell-hackerrank

./: README.md  hackerrank-hs.cabal
src/: FilterElements.hs  Lib.hs  MatrixRotation.hs  PolygonArea.hs  PolygonPerimiter.hs  functionOrNot.hs  hackerrank.hs
