name: hackerrank-hs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/hackerrank-hs#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/hackerrank-hs

library
    exposed-modules:
        Lib
    build-depends:
        base >=4.7 && <5,
        text -any,
        MisssingH -any
    default-language: Haskell2010
    hs-source-dirs: src

executable hackerrank-hs-exe
    main-is: Main.hs
    build-depends:
        base -any,
        hackerrank-hs -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite hackerrank-hs-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hackerrank-hs -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
